public/css/add-testers.css
/* h1 {
    text-align: center;
} */

.card {
    margin: 20px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.tester-name {
    font-size: 2rem;
}

.update-name-btn,
.delete-tester-btn {
    margin: 0 5px 0 5px;
    border-radius: 20px;
    width: 50%;
}

.testers {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 50px;
}

#add-tester-input {
    width: 50%;
}

.input-group {
    width: 45%;
    margin: auto;
}

.card-btns {
    display: flex;
    justify-content: center;
}

.update-name {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.update-name-form {
    display: flex;
    flex-direction: column;
    width: 40%;
}
#add-tester-input::placeholder{
    letter-spacing: 10px;
    text-align: center;
}


#add-tester-btn {

    color: #fff;
    cursor: pointer;
    text-align: center;
    border: none;
    background-size: 300% 100%;

    moz-transition: all .4s ease-in-out;
    -o-transition: all .4s ease-in-out;
    -webkit-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;


    background-image: linear-gradient(to right, #eb3941, #f15e64, #e14e53, #e2373f);
    box-shadow: 0 5px 15px rgba(242, 97, 103, .4);
}

#add-tester-btn:hover {
    color: white;
    background-position: 100% 0;
    moz-transition: all .4s ease-in-out;
    -o-transition: all .4s ease-in-out;
    -webkit-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;
}

#add-tester-btn:focus {
    outline: none;
}
.error-message{
    margin: auto;
    margin-top: 20px;
    color: red;
}

.update-name-form{
    margin: 50px;
}
.send-new-name, .cancel-update{
    margin: 10px;
    color: white;
}
.send-new-name{
    background-color: #5dc35d;
}
.cancel-update{
    background-color: #ff6b6b;
}

@media only screen and (max-width: 600px) {
    .add-tester-input-box {
      display: flex;
      flex-direction: column;
    }
    #add-tester-input{
        width: 100%;
    }
    .input-group-append{
        display: flex;
        justify-content: center;
        margin: 10px;

    }
  }

